# obsidian_notes

./: .gitignore  .prettierignore  Makefile  Pipfile  README.md  annotate.py  codeblock.py  custom_pygments_style.py  modd.conf  pyproject.toml  requirements.txt  run.py  template.html
templates/: atom.xml  dir.html  footer.html  index.html  lastweek.html  page.html  search.html  style.css
